FIX Docker configuration